connected hardware to interface

--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
             <h1>
                 Remote Firework Firing System
             </h1>
-            <hr class="text-black">
+            <hr class="text-black bg-black border-black">
 
             <div class="d-flex">
                 <div class="section-wrapper">
